--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
     if [[ "$OS" == "native" && "$TRAVIS_OS_NAME" == "linux" ]]
     then
      sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+     sudo add-apt-repository ppa:llvm-toolchain-trusty-5.0 -y
      sudo apt-get update -qq
      sudo apt-get install -qq libcurl4-openssl-dev libhiredis-dev redis-server libjsoncpp-dev libargtable2-dev libgnutls-dev libgcrypt11-dev valgrind wget gcc-5 g++-5 clang
      wget http://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-0.9.52.tar.gz
@@ -17,8 +18,6 @@ before_install:
      sudo make install && sudo ldconfig
      cd .. && sudo rm -rf libmicrohttpd-0.9.52
      sudo pip install codecov
-     sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-     sudo apt-get update -qq
      sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
     elif [[ "$TRAVIS_OS_NAME" == "osx" ]]
     then
