--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ compiler:
     - gcc
 
 script:
+    - make check-format
     - if [[ "$OS" == "native" ]]; then ./docker/build_test_install.sh; fi
-    - if [[ "$OS" == "native" && "$TRAVIS_OS_NAME" == "linux" && "$COMPILER" == "gcc" ]]; then ./dev/codecov.sh; bash <(curl -s https://codecov.io/bash); fi
+    - if [[ "$OS" == "native" && "$TRAVIS_OS_NAME" == "linux" && "$COMPILER" == "gcc" ]]; then ./dev/codecov.sh; fi
     - if [[ "$OS" != "native" ]]; then cd docker; make ${OS}; fi
