--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ before_install:
   - |
     if [[ "$OS" == "native" && "$TRAVIS_OS_NAME" == "linux" ]]
     then
+     sudo apt-get install -qq wget
      sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-     sudo add-apt-repository ppa:llvm-toolchain-trusty-5.0 -y
+     sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-precise-5.0 main' -y
+     wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
      sudo apt-get update -qq
      sudo apt-get install -qq libcurl4-openssl-dev libhiredis-dev redis-server libjsoncpp-dev libargtable2-dev libgnutls-dev libgcrypt11-dev valgrind wget gcc-5 g++-5 clang
      wget http://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-0.9.52.tar.gz
