--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     then
      sudo apt-get install -qq wget
      sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-     sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-precise-5.0 main' -y
+     sudo add-apt-repository 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-5.0 main' -y
      wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
      sudo apt-get update -qq
      sudo apt-get install -qq libcurl4-openssl-dev libhiredis-dev redis-server libjsoncpp-dev libargtable2-dev libgnutls-dev libgcrypt11-dev valgrind wget gcc-5 g++-5 clang
