--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
      sudo add-apt-repository 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-5.0 main' -y
      wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
      sudo apt-get update -qq
-     sudo apt-get install -qq libcurl4-openssl-dev libhiredis-dev redis-server libjsoncpp-dev libargtable2-dev libgnutls-dev libgcrypt11-dev valgrind wget gcc-5 g++-5 clang
+     sudo apt-get install -qq libcurl4-openssl-dev libhiredis-dev redis-server libjsoncpp-dev libargtable2-dev libgnutls-dev libgcrypt11-dev valgrind wget gcc-5 g++-5 clang-5.0
      wget http://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-0.9.52.tar.gz
      tar -xvf libmicrohttpd-0.9.52.tar.gz
      cd libmicrohttpd-0.9.52
@@ -58,6 +58,7 @@ compiler:
     - gcc
 
 script:
+    - make check-format
     - if [[ "$OS" == "native" ]]; then ./docker/build_test_install.sh; fi
     - if [[ "$OS" == "native" && "$TRAVIS_OS_NAME" == "linux" && "$COMPILER" == "gcc" ]]; then ./dev/codecov.sh; fi
     - if [[ "$OS" != "native" ]]; then cd docker; make ${OS}; fi
