Fix broken build due to catch repository migration.

--- a/src/catch/CMakeLists.txt
+++ b/src/catch/CMakeLists.txt
@@ -6,9 +6,8 @@ find_package(Git REQUIRED)
 ExternalProject_Add(
     catch
     PREFIX ${CMAKE_BINARY_DIR}/catch
-    GIT_REPOSITORY https://github.com/philsquared/Catch.git
-    TIMEOUT 10
-    UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+    URL https://github.com/catchorg/Catch2/releases/download/v2.0.1/catch.hpp
+    DOWNLOAD_NO_EXTRACT 1
     CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
     INSTALL_COMMAND ""
@@ -17,4 +16,4 @@ ExternalProject_Add(
 
 # Expose required variable (CATCH_INCLUDE_DIR) to parent scope
 ExternalProject_Get_Property(catch source_dir)
-set(CATCH_INCLUDE_DIR ${source_dir}/include CACHE INTERNAL "Path to include folder for Catch")
+set(CATCH_INCLUDE_DIR ${source_dir}/../ CACHE INTERNAL "Path to include folder for Catch")
