Fix include paths and use correct catch version.

--- a/.dockerignore
+++ b/.dockerignore
@@ -27,3 +27,28 @@ src/examples/gen/*
 
 *.tar.gz
 *.asc
+
+# CMake
+CMakeFiles
+CMakeCache.txt
+
+
+# Visual Studio files
+/.vscode
+*.sln
+*.vcxproj
+*.suo
+*.sdf
+*.opensdf
+*.obj
+*.log
+*.tlog
+*.filters
+Win32
+
+# misc
+bin
+lib
+gen
+win32-deps
+**/*.dir/*
