Add osx target to makefile

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -21,3 +21,6 @@ arch: ArchLinux.Dockerfile
 
 fedora: Fedora.Dockerfile
 	docker build --rm -f $< ..
+
+osx:
+	cd .. && ./docker/build_test_install.sh
