--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,8 @@ set(TCP_SOCKET_SERVER NO CACHE BOOL "Include Tcp Socket server")
 set(TCP_SOCKET_CLIENT NO CACHE BOOL "Include Tcp Socket client")
 set(REDIS_SERVER YES CACHE BOOL "Include Redis server using hiredis")
 set(REDIS_CLIENT YES CACHE BOOL "Include Redis client using hiredis")
-set(HTTP_SERVER NO CACHE BOOL "Include HTTP server using libmicrohttpd")
-set(HTTP_CLIENT NO CACHE BOOL "Include HTTP client support using curl")
+set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
+set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
 set(COMPILE_STUBGEN YES CACHE BOOL "Compile the stubgenerator")
 set(COMPILE_EXAMPLES YES CACHE BOOL "Compile example programs")
