--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -12,11 +12,17 @@ endif()
 find_path(CATCH_INCLUDE_DIR NAMES catch.hpp)
 include_directories(${CATCH_INCLUDE_DIR})
 
+
+
 enable_testing()
 add_executable(jsonrpccpp-unittest unittests.cpp)
+
+find_package(jsoncpp CONFIG REQUIRED)
+target_link_libraries(jsonrpccpp-unittest PRIVATE jsoncpp_lib)
+
 
 if(${CONNECTOR_MICROHTTPD} OR ${CONNECTOR_CURL})
   find_package(CURL REQUIRED)
   include_directories(${MHD_INCLUDE_DIR})
-  target_link_libraries(jsonrpccpp-unittest jsonrpccpp-connector-curl jsonrpccpp-connector-microhttpd ${CURL_LIBRARIES} ${MHD_LIBRARIES})
+  target_link_libraries(jsonrpccpp-unittest PRIVATE jsonrpccpp-connector-curl jsonrpccpp-connector-microhttpd ${CURL_LIBRARIES} ${MHD_LIBRARIES})
 endif()
