--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -3,8 +3,19 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 find_package(argtable REQUIRED)
 
 include_directories(${CMAKE_BINARY_DIR})
-file(GLOB_RECURSE jsonrpcstub_source *.cpp)
-add_executable(jsonrpcstub ${jsonrpcstub_source})
+set(jsonrpcstub_source
+    ${CMAKE_CURRENT_SOURCE_DIR}/client/cppclientstubgenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/client/jsclientstubgenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/client/pyclientstubgenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/helper/cpphelper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/server/cppserverstubgenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/codegenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/procedure.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/specificationparser.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/stubgenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/stubgeneratorfactory.cpp
+)
+add_executable(jsonrpcstub ${jsonrpcstub_source} main.cpp)
 target_link_libraries(jsonrpcstub jsoncpp_lib ${ARGTABLE_LIBRARIES})
 
 configure_file(jsonrpcstub.1.in "${CMAKE_BINARY_DIR}/jsonrpcstub.1" @ONLY)
@@ -15,3 +26,17 @@ add_dependencies(jsonrpcstub manpage)
 install(TARGETS jsonrpcstub jsonrpcstub
     RUNTIME DESTINATION  ${CMAKE_INSTALL_BINDIR}
 )
+
+if(COMPILE_TESTS)
+    target_sources(jsonrpccpp-unittest PRIVATE
+        ${jsonrpcstub_source}
+        ${CMAKE_CURRENT_SOURCE_DIR}/test/test_stubgenerator.cpp
+    )
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/testspec1.json DESTINATION ${PROJECT_BINARY_DIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/testspec2.json DESTINATION ${PROJECT_BINARY_DIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/testspec3.json DESTINATION ${PROJECT_BINARY_DIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/testspec4.json DESTINATION ${PROJECT_BINARY_DIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/testspec5.json DESTINATION ${PROJECT_BINARY_DIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/testspec6.json DESTINATION ${PROJECT_BINARY_DIR})
+    add_test(server ${CMAKE_BINARY_DIR}/jsonrpccpp-unittest "[stubgenerator]" --durations yes)
+endif()
