--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -25,6 +25,13 @@ if (JSONRPC_SERVER)
   target_link_libraries(jsonrpccpp-unittest PRIVATE jsonrpccpp-server)
 endif()
 
+if (STUBGENERATOR)
+  include_directories(${CMAKE_BINARY_DIR})
+  set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/src/stubgenerator)
+  find_package(argtable REQUIRED)
+  target_link_libraries(jsonrpccpp-unittest PRIVATE ${ARGTABLE_LIBRARIES})
+endif()
+
 if(${CONNECTOR_MICROHTTPD} OR ${CONNECTOR_CURL})
   find_package(CURL REQUIRED)
   include_directories(${MHD_INCLUDE_DIR})
