--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ set(REDIS_SERVER YES CACHE BOOL "Include Redis server using hiredis")
 set(REDIS_CLIENT YES CACHE BOOL "Include Redis client using hiredis")
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
-set(BEAST_HTTP_SERVER YES CACHE BOOL "Include Beast HTTP server using boost beast")
-set(BEAST_HTTP_CLIENT YES CACHE BOOL "Include Beast HTTP client support using boost beast")
+set(BEAST_HTTP_SERVER ON CACHE BOOL "Include Beast HTTP server using boost beast")
+set(BEAST_HTTP_CLIENT ON CACHE BOOL "Include Beast HTTP client support using boost beast")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
 set(COMPILE_STUBGEN YES CACHE BOOL "Compile the stubgenerator")
 set(COMPILE_EXAMPLES YES CACHE BOOL "Compile example programs")
