--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Installing GCC and CMake
-          command: 'apt-get update && apt-get update && apt-get install -y wget build-essential cmake libjsoncpp-dev libargtable2-dev libcurl4-openssl-dev libmicrohttpd-dev git libhiredis-dev redis-server lcov'
+          name: Installing Dependencies
+          command: ./docker/deps-debian.sh
       - run:
           name: Build test and install
           command: 'OS=debian ./docker/build_test_install.sh'
