Added fedora + archlinux to the tested distros

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   codecov: codecov/codecov@1.0.2
 jobs:
-  "build-linux-gcc":
+  "build-debian-gcc":
     docker:
       - image: "debian:latest"
     steps:
@@ -18,6 +18,29 @@ jobs:
           command: lcov --directory . --capture --output-file coverage.info && lcov --remove coverage.info '/usr/*' --output-file coverage.info
       - codecov/upload:
           file: coverage.info
+
+  "build-fedora-gcc":
+    docker:
+      - image: "fedora:latest"
+    steps:
+      - checkout
+      - run:
+          name: Installing Dependencies
+          command: ./docker/deps-fedora.sh
+      - run:
+          name: Build test and install
+          command: 'OS=debian ./docker/build_test_install.sh'
+  "build-archlinux-gcc":
+    docker:
+      - image: "archlinux:latest"
+    steps:
+      - checkout
+      - run:
+          name: Installing Dependencies
+          command: ./docker/deps-archlinux.sh
+      - run:
+          name: Build test and install
+          command: 'OS=debian ./docker/build_test_install.sh'
   "build-osx-clang":
     macos:
       xcode: "13.0.0"
@@ -33,5 +56,5 @@ workflows:
   version: 2
   build:
     jobs:
-      - "build-linux-gcc"
+      - "build-debian-gcc"
       - "build-osx-clang"
